--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "post": "next-sitemap"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -16,14 +18,18 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
-    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.8.0",
     "next": "13.4.7",
+    "next-mdx-remote": "^4.4.1",
+    "next-sitemap": "^4.1.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "remark": "^14.0.3",
-    "remark-html": "^15.0.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^6.0.0",
+    "rehype-slug": "^5.1.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
